# nsmt-content-pipeline

./: .gitignore  AGENTS.md  CODEX_ADVERSARIAL_REVIEW.md  FOR_QUINCY.md  FULL_REPO_ADVERSARIAL_REVIEW.md  MYSTICS_INGESTION_HANDOFF.md  NEXT_STEPS.md  PHASE_B_PLAN.md  README.md  TURNOVER.md  X_INTEGRATION_PLAN.md  X_PLAN_ADVERSARIAL_REVIEW.md  generate_baselines.py  generate_content.py  pyproject.toml  setup_contentful.py  style_guide.py  test_discord.py  test_transcripts.py
.github/workflows/: citron-feature-demo.yml  compare-models.yml  daily-content.yml  draft-baseline.yml  kb-refresh.yml  mystics-season-demo.yml  publish-corrected.yml  transcript-ci-probe.yml
about/: AIWriters.jsx  AVATAR_PROMPTS.md  build.sh  index.html
archive/: setup_contentful.py
data/: _research_summary_college.md  _research_summary_pro_a.md  _research_summary_pro_b.md
data/teams/: american.json  capitals.json  commanders.json  dc-defenders.json  dc-united.json  george-mason-women.json  george-mason.json  george-washington.json  georgetown.json  go-go.json  mary-washington.json  maryland.json  marymount.json  mystics.json  nationals.json  spirit.json  virginia.json  (+2 more)
docs/: LESSONS_LEARNED.md  NEW_TEAM_CHECKLIST.md  PROJECT_STATE.md
ingestion/: __init__.py  cache.py  espn_mystics.py  generate_story_packet.py  mystics_normalizer.py  mystics_postgame_recap.py  schema.py  season_aggregator.py  validators.py
newsroom/: __init__.py  assets.py  claim_audit.py  common.py  discord_review.py  drafts.py  external_review.py  llm_writer.py  memory.py  qa.py  schemas.py  story_angles.py
scripts/: codex_review.py  codex_rewrite.py  com.thensmt.codex-review.plist  com.thensmt.codex-rewrite.plist  compare_models.py  demo_citron_feature.py  demo_mystics_season.py  llm_recap_acceptance.py  publish_from_corrected.py  refresh_kb.py  run_mystics_recap.sh  transcript_acceptance.py
tests/: __init__.py  test_llm_writer.py  test_mystics_postgame_recap.py  test_story_packet.py  test_story_packet_for_team.py  test_youtube_transcripts.py
(+39 files in other folders)
